@@ -17,6 +17,7 @@
         * [BUGFIX]: #2991 #2928 #2929 #2941 #2960 Fixed executing "garbage" query, causing application crash.
         * [BUGFIX]: #2920 Fixed removing several databases.
         * [BUGFIX]: #3068 #3066 Fixed database removal confirmation dialog so the message asks about removing it from the list, not deleting it.
+        * [BUGFIX]: #3073 Fixed crash when unloading plugin with its own configuration subpage and saving config dialog.
 
 [3.0.7]
         * [ADDED]: #2951 Implemented dropdown value picking for foreign key columns in grid view.
